# Tough-C-Profiler

./: .gitignore  BUILD.md  BUILDING_ON_WINDOWS.md  CMakeLists.txt  COMPLETE_MVP.md  Core Rule Sets.md  LOCAL_BUILD_STATUS.md  MVP Planning Document.md  MVP_COMPLETE.md  PHASE1_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_VALIDATION.md  README.md  Tough C Menifesto.md  Working Track .md  quick-build.ps1  quick-build.sh
.github/workflows/: ci.yml
Docs/: vision.md
examples/: 01_smart_pointers.tcc  02_raw_pointer_violations.tcc  03_lifetime_safety.tcc  04_lifetime_violations.tcc  05_thread_safety.tcc  06_thread_violations.tcc
include/tcc/: ASTVisitor.h  ConcurrencyRules.h  Core.h  Diagnostic.h  FileDetector.h  LifetimeRules.h  OwnershipRules.h  Rule.h  RuleEngine.h
src/: ASTVisitor.cpp  CMakeLists.txt  ConcurrencyRules.cpp  Diagnostic.cpp  FileDetector.cpp  LifetimeRules.cpp  OwnershipRules.cpp  Rule.cpp  RuleEngine.cpp  main.cpp
tests/: CMakeLists.txt
tests/data/fail/: concurrency_unsafe.cpp  lifetime_dangling.cpp  lifetime_raw_ptr_container.cpp  lifetime_ref_member.cpp  ownership_malloc_free.cpp  ownership_new_delete.cpp  ownership_raw_owning_ptr.cpp
tests/data/pass/: concurrency_safe.cpp  lifetime_correct_patterns.cpp  ownership_containers.cpp  ownership_smart_pointers.cpp
